--- a/index.html
+++ b/index.html
@@ -235,23 +235,24 @@
 
         <section>
             <h2>Objective</h2>
-            <p>Salesforce Developer with 3 years of experience evaluating company processes, developing workflows, and adapting applications to meet business needs. Skilled in preparing technical documentation, supporting team members, and testing applications. A creative team player with strong technical and time management abilities, seeking a challenging role to leverage my expertise while fostering professional growth.</p>
+            <p>Salesforce Developer with over 3 years of experience delivering scalable, secure, and user-focused CRM solutions. Proven ability to develop Apex triggers, Lightning components, and declarative tools to streamline processes, improve user experience, and reduce operational workload. Known for resolving high-impact bugs quickly, optimizing performance, and contributing to enterprise-level deployments in agile environments.</p>
         </section>
 
         <section>
             <h2>Summary</h2>
             <ul>
-                <li>3 years of experience in Salesforce development.</li>
-                <li>Proficient in Apex, Batch Apex, and Lightning Web Components.</li>
-                <li>Experienced in data migration using Data Loader.</li>
-                <li>Skilled in deploying components via Change Sets.</li>
-                <li>Expertise in developing Flows, Approval Processes, and Validation Rules.</li>
-                <li>Strong knowledge of Process Builder and security concepts (Roles, Profiles, Sharing Rules, etc.).</li>
-                <li>Proficient in customizing Page Layouts, Org-Wide Defaults, and Public Groups.</li>
-                <li>Adept at creating Tabular, Summary, and Matrix Reports and Dashboards.</li>
-                <li>Experienced in Agile methodology and writing test cases.</li>
-                <li>Knowledgeable in JavaScript, HTML, and CSS.</li>
-                <li>Implemented custom labels to enhance code quality.</li>
+                <li>Salesforce Developer with 3 years of hands-on experience in Salesforce application development and customization.</li>
+                <li>Proficient in Apex programming, including Batch Apex, Triggers, and Test Class development.</li>
+                <li>Experienced in data migration using Salesforce Data Loader and deploying components via Change Sets.</li>
+                <li>Good working knowledge of declarative tools including Flows, Process Builder, Approval Processes, and Validation Rules.</li>
+                <li>Skilled in customizing Roles, Profiles, Page Layouts, Organization-Wide Defaults, and Sharing Rules to manage access and security.</li>
+                <li>Good Knowledge in creating Tabular, Summary, Matrix Reports and Dashboards.</li>
+                <li>Good knowledge in Development, Design and reviewing the code.</li>
+                <li>Hands-on experience in developing Lightning Web Components (LWC) for responsive and interactive user interfaces.</li>
+                <li>Followed Agile methodology, including Sprint planning and Jira-based task management.</li>
+                <li>Good experience in code design, development, and code review with a focus on clean, maintainable solutions.</li>
+                <li>Implemented sharing rules for role-based and group-based access control.</li>
+                <li>Used Custom Labels and Custom Metadata to promote scalable and reusable code.</li>
             </ul>
         </section>
 
