--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
             <div class="skills-container">
                 <span class="skill-tag">Apex Programming</span>
                 <span class="skill-tag">Lightning Web Components</span>
+                <span class="skill-tag">Aura Components</span>
                 <span class="skill-tag">Batch Apex</span>
                 <span class="skill-tag">SOQL</span>
                 <span class="skill-tag">Flows</span>
@@ -277,17 +278,17 @@
             <div class="experience">
                 <h3>Salesforce Developer</h3>
                 <p><em>Ciora Solutions</em> | May 2021 – May 2024</p>
-                <p><strong>Project:</strong> <span>Greystar</span></p> <!-- Greystar placed beside project name -->
+                <p><strong>Client:</strong> <span>Greystar</span></p> <!-- Greystar placed beside project name -->
                 <p><em>Greystar is a global leader in rental housing, specializing in real estate sectors across multiple geographies, with a unique model to own, operate, and develop housing solutions worldwide.</em></p>
                 <ul>
-                    <li>Served as both Administrator and Developer within the organization.</li>
-                    <li>Wrote Apex classes, triggers, and batch classes to meet client business needs while adhering to Governor Limits.</li>
-                    <li>Developed and customized Lightning Web Components and Aura-enabled controllers.</li>
-                    <li>Designed modal popups in Lightning tailored to business requirements.</li>
-                    <li>Created Public Groups and assigned users with specific profiles to control record access.</li>
-                    <li>Built triggers to manage inbound email functionalities.</li>
-                    <li>Wrote and scheduled batch classes on a yearly basis.</li>
-                    <li>Resolved Salesforce configuration issues and bugs via ServiceNow tickets.</li>
+                    <li>Worked as both a Salesforce Administrator and Developer, handling setup and custom development tasks.</li>
+                    <li>Developed 5+ Apex triggers and handler classes using best practices (one trigger per object, recursion prevention).</li>
+                    <li>Developed custom user interfaces using both Lightning Web Components (LWC) and Aura components, leveraging Aura-enabled Apex controllers for server-side logic based on project requirements.</li>
+                    <li>Managed data operations and performed data migration tasks using Salesforce Data Loader, including insert and update operations.</li>
+                    <li>Created and configured Public Groups, assigning users with different profiles to ensure record-level access control based on business rules.</li>
+                    <li>Developed triggers to handle the inbound and email functionalities</li>
+                    <li>Authored and scheduled Batch Apex classes to run on a yearly basis, aligning with business reporting and data processing requirements.</li>
+                    <li>Resolved 100+ ServiceNow tickets involving Apex bugs, UI defects, and data integrity issues, maintaining a 95% SLA adherence rate.</li>
                 </ul>
             </div>
         </section>
