--- a/index.html
+++ b/index.html
@@ -279,8 +279,10 @@
                 <h3>Salesforce Developer</h3>
                 <p><em>Ciora Solutions</em> | May 2021 – May 2024</p>
                 <p><strong>Client:</strong> <span>Greystar</span></p> <!-- Greystar placed beside project name -->
+                <h3>Project Overview</h3>
                 <p><em>Greystar is a global leader in rental housing, specializing in real estate sectors across multiple geographies, with a unique model to own, operate, and develop housing solutions worldwide.</em></p>
                 <ul>
+                 <h3>Roles & Responsibilities:</h3>   
                     <li>Worked as both a Salesforce Administrator and Developer, handling setup and custom development tasks.</li>
                     <li>Developed 5+ Apex triggers and handler classes using best practices (one trigger per object, recursion prevention).</li>
                     <li>Developed custom user interfaces using both Lightning Web Components (LWC) and Aura components, leveraging Aura-enabled Apex controllers for server-side logic based on project requirements.</li>
