--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <h3>Salesforce Developer</h3>
                 <p><em>Ciora Solutions</em> | May 2021 – May 2024</p>
                 <p><strong>Client:</strong> <span>Greystar</span></p> <!-- Greystar placed beside project name -->
-                <h3>Project Overview</h3>
+                <h3>Project Overview:</h3>
                 <p><em>Greystar is a global leader in rental housing, specializing in real estate sectors across multiple geographies, with a unique model to own, operate, and develop housing solutions worldwide.</em></p>
                 <ul>
                  <h3>Roles & Responsibilities:</h3>   
